@@ -55,21 +55,17 @@ around BUILDARGS => sub
 
     my $args = $class->$orig(@_);
 
-    my ($zilla, $plugin_name, $feature_name, $description, $always_recommend) =
-        delete @{$args}{qw(zilla plugin_name name description always_recommend)};
-
     my @private = grep { /^_/ } keys %$args;
     confess "Invalid options: @private" if @private;
 
-    my %other;
-    for my $dkey (grep { /^-/ } keys %$args)
-    {
-        (my $key = $dkey) =~ s/^-//;
-        confess "invalid option: $dkey" if $dkey ne '-type' and $dkey ne '-phase';
-        $other{$key} = delete $args->{$dkey};
-    }
-    my $phase = $other{phase};
-    my $type = $other{type};
+    my ($zilla, $plugin_name) = delete @{$args}{qw(zilla plugin_name)};
+
+    my ($feature_name, $description, $always_recommend, $phase) =
+        delete @{$args}{qw(-name -description -always_recommend -phase)};
+    my ($type) = grep { defined } delete @{$args}{qw(-type -relationship)};
+
+    my @other_options = grep { /^-/ } keys %$args;
+    confess "invalid option(s): @other_options" if @other_options;
 
     # handle magic plugin names
     if ((not $feature_name or not $phase or not $type)
@@ -150,7 +146,7 @@ __END__
 In your F<dist.ini>:
 
     [OptionalFeature / XS Support]
-    description = XS implementation (faster, requires a compiler)
+    -description = XS implementation (faster, requires a compiler)
     Foo::Bar::XS = 1.002
 
 =head1 DESCRIPTION
@@ -165,7 +161,7 @@ from the plugin name.
 You can specify requirements for different phases and relationships with:
 
     [OptionalFeature / Feature name]
-    description = description
+    -description = description
     -phase = test
     -relationship = requires
     Fitz::Fotz    = 1.23
@@ -178,12 +174,12 @@ To specify feature requirements for multiple phases, provide them as separate
 plugin configurations (keeping the feature name and description constant):
 
     [OptionalFeature / Feature name]
-    description = description
+    -description = description
     -phase = runtime
     Foo::Bar = 0
 
     [OptionalFeature / Feature name]
-    description = description
+    -description = description
     -phase = test
     Foo::Baz = 0
 
@@ -200,8 +196,8 @@ The example below is equivalent to the synopsis example above, except for the
 name of the resulting plugin:
 
     [OptionalFeature]
-    name = XS Support
-    description = XS implementation (faster, requires a compiler)
+    -name = XS Support
+    -description = XS implementation (faster, requires a compiler)
     -phase = runtime
     -relationship = requires
     Foo::Bar::XS = 1.002
@@ -214,17 +210,17 @@ This is mostly a restating of the information above.
 
 =over 4
 
-=item * C<name>
+=item * C<-name>
 
 The name of the optional feature, to be presented to the user. Can also be
 extracted from the plugin name.
 
-=item * C<description>
+=item * C<-description>
 
 The description of the optional feature, to be presented to the user.
 Defaults to the feature name, if not provided.
 
-=item * C<always_recommend>
+=item * C<-always_recommend>
 
 If set with a true value, the prerequisites are added to the distribution's
 metadata as recommended prerequisites (e.g. L<cpanminus> will install
@@ -236,7 +232,7 @@ non-interactively).
 The phase of the prequisite(s). Should be one of: build, test, runtime,
 or develop.
 
-=item * C<-relationship>
+=item * C<-relationship> (or C<-type>)
 
 The relationship of the prequisite(s). Should be one of: requires, recommends,
 suggests, or conflicts.
